# coffeeAgntcy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  Makefile  README.md  docs.sh  index.html  mkdocs.yaml  mkdocs.yml
.github/: pull_request_template.md
coffeeAGNTCY/coffee_agents/corto/: .env.example  README.md  corto_dashboard.json  docker-compose.yaml  pyproject.toml
coffeeAGNTCY/coffee_agents/corto/common/: llm.py
coffeeAGNTCY/coffee_agents/corto/config/: config.py  logging_config.py
coffeeAGNTCY/coffee_agents/corto/config/docker/agp/: server-config.yaml
coffeeAGNTCY/coffee_agents/corto/config/docker/slim/: server-config.yaml
coffeeAGNTCY/coffee_agents/corto/deployment/helm/corto-ui/: Chart.yaml  values.yaml
coffeeAGNTCY/coffee_agents/corto/deployment/helm/exchange/: Chart.yaml  values.yaml
coffeeAGNTCY/coffee_agents/corto/deployment/helm/farm/: Chart.yaml  values.yaml
coffeeAGNTCY/coffee_agents/corto/docker/: Dockerfile.exchange  Dockerfile.farm  Dockerfile.ui  README.md  docker-compose.yaml
coffeeAGNTCY/coffee_agents/corto/exchange/: main.py
coffeeAGNTCY/coffee_agents/corto/exchange/clients/a2a/: client.py
coffeeAGNTCY/coffee_agents/corto/exchange/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
coffeeAGNTCY/coffee_agents/corto/exchange/graph/: graph.py  models.py  shared.py  tools.py
coffeeAGNTCY/coffee_agents/corto/farm/: agent.py  agent_executor.py  card.py  farm_server.py
coffeeAGNTCY/coffee_agents/lungo/: .env.example  README.md  docker-compose.yaml  lungo_dashboard.json  pyproject.toml
coffeeAGNTCY/coffee_agents/lungo/common/: llm.py
coffeeAGNTCY/coffee_agents/lungo/config/: config.py
coffeeAGNTCY/coffee_agents/lungo/docker/: Dockerfile.brazil-farm  Dockerfile.colombia-farm  Dockerfile.exchange  Dockerfile.ui  Dockerfile.vietnam-farm  Dockerfile.weather-mcp
coffeeAGNTCY/coffee_agents/lungo/docs/: identity_integration.md
coffeeAGNTCY/coffee_agents/lungo/exchange/: main.py
coffeeAGNTCY/coffee_agents/lungo/exchange/frontend/: eslint.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.ts
coffeeAGNTCY/coffee_agents/lungo/exchange/graph/: graph.py  models.py  tools.py
coffeeAGNTCY/coffee_agents/lungo/farms/brazil/: agent.py  agent_executor.py  card.py  farm_server.py
coffeeAGNTCY/coffee_agents/lungo/farms/colombia/: agent.py  agent_executor.py  card.py  farm_server.py  utils.py
coffeeAGNTCY/coffee_agents/lungo/farms/vietnam/: agent.py  agent_executor.py  card.py  farm_server.py  utils.py
coffeeAGNTCY/coffee_agents/lungo/mcp_servers/: weather_service.py
coffeeAGNTCY/coffee_agents/lungo/services/: identity_service.py  identity_service_impl.py  models.py
coffee_agntcy_supervisor/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
coffee_agntcy_supervisor/supervisor/: main.py
coffee_agntcy_supervisor/supervisor/api/routes/: stateless_runs.py
coffee_agntcy_supervisor/supervisor/clients/agp_client/: agp_client.py  langgraph.json  logging_config.py  mock.py  rest.py
coffee_agntcy_supervisor/supervisor/common/: logging_config.py
coffee_agntcy_supervisor/supervisor/graph/: graph.py  router.py
coffee_agntcy_supervisor/supervisor/models/: models.py  state.py
coffee_agntcy_supervisor/test_clients/ap_client/: client.py  langgraph.json  logging_config.py
(+163 files in other folders)
